syntax = "proto3";
option go_package = "./proto";
import "google/protobuf/empty.proto";

message ProvisionerPlugin {
  string name = 1;
  string version = 2;
}

message AgentServicePlugin {
  string name = 1;
  string version = 2;
}

message ProvisionerPluginList {
  repeated ProvisionerPlugin plugins = 1;
}

message AgentServicePluginList {
  repeated AgentServicePlugin plugins = 1;
}

message UninstallPluginRequest {
  string name = 1;
}

service Plugins {
  rpc ListProvisionerPlugins (google.protobuf.Empty) returns (ProvisionerPluginList) {}
  rpc ListAgentServicePlugins (google.protobuf.Empty) returns (AgentServicePluginList) {}
  rpc UninstallProvisionerPlugin (UninstallPluginRequest) returns (google.protobuf.Empty) {}
  rpc UninstallAgentServicePlugin (UninstallPluginRequest) returns (google.protobuf.Empty) {}
}